--- a/spyder/locale/ja/LC_MESSAGES/spyder.po
+++ b/spyder/locale/ja/LC_MESSAGES/spyder.po
@@ -1020,7 +1020,7 @@ msgid "Downloading"
 msgstr "ダウンロード中"
 
 #: spyder/plugins/completion/providers/kite/widgets/install.py:213
-msgid "Kite comes with a native app called the Copilot <br>which provides you with real time <br>documentation as you code.<br><br>When Kite is done installing, the Copilot will <br>launch automatically and guide you throught the <br>rest of the setup process."
+msgid "Kite comes with a native app called the Copilot <br>which provides you with real time <br>documentation as you code.<br><br>When Kite is done installing, the Copilot will <br>launch automatically and guide you through the <br>rest of the setup process."
 msgstr "Kite はCopilotというネイティブアプリケーションを含みます <br>このおかげであなたのコードを<br>リアルタイム文書化することができます。<br><br>Kiteインストール後、Copilotコードは <br> 自動的に起動され、以後のセットアッププロセスを <br>補助します。"
 
 #: spyder/plugins/completion/providers/kite/widgets/install.py:221
