--- a/spyder/locale/de/LC_MESSAGES/spyder.po
+++ b/spyder/locale/de/LC_MESSAGES/spyder.po
@@ -1023,7 +1023,7 @@ msgid "Downloading"
 msgstr "Wird heruntergeladen"
 
 #: spyder/plugins/completion/providers/kite/widgets/install.py:213
-msgid "Kite comes with a native app called the Copilot <br>which provides you with real time <br>documentation as you code.<br><br>When Kite is done installing, the Copilot will <br>launch automatically and guide you throught the <br>rest of the setup process."
+msgid "Kite comes with a native app called the Copilot <br>which provides you with real time <br>documentation as you code.<br><br>When Kite is done installing, the Copilot will <br>launch automatically and guide you through the <br>rest of the setup process."
 msgstr "Kite wird mit einer nativen <br> App namens Copilot ausgeliefert, die Ihnen Echtzeit-Dokumentation für den Code bietet. <br> <br> Nach Abschluss der Kite-Installation wird der Copilot automatisch gestartet und führt Sie durch den Rest des Setup-Prozesses."
 
 #: spyder/plugins/completion/providers/kite/widgets/install.py:221
