--- a/spyder/locale/es/LC_MESSAGES/spyder.po
+++ b/spyder/locale/es/LC_MESSAGES/spyder.po
@@ -1024,7 +1024,7 @@ msgid "Downloading"
 msgstr "Descargando"
 
 #: spyder/plugins/completion/providers/kite/widgets/install.py:213
-msgid "Kite comes with a native app called the Copilot <br>which provides you with real time <br>documentation as you code.<br><br>When Kite is done installing, the Copilot will <br>launch automatically and guide you throught the <br>rest of the setup process."
+msgid "Kite comes with a native app called the Copilot <br>which provides you with real time <br>documentation as you code.<br><br>When Kite is done installing, the Copilot will <br>launch automatically and guide you through the <br>rest of the setup process."
 msgstr "Kite viene con una aplicación nativa llamada Copilot <br> que le proporciona documentación en tiempo real mientras porgrama.<br><br>Cuando Kite termine de instalar, Copilot se iniciará automáticamente y lo guiará a través del resto del proceso de configuración."
 
 #: spyder/plugins/completion/providers/kite/widgets/install.py:221
