--- a/spyder/locale/pt_BR/LC_MESSAGES/spyder.po
+++ b/spyder/locale/pt_BR/LC_MESSAGES/spyder.po
@@ -1021,7 +1021,7 @@ msgid "Downloading"
 msgstr "Baixando"
 
 #: spyder/plugins/completion/providers/kite/widgets/install.py:213
-msgid "Kite comes with a native app called the Copilot <br>which provides you with real time <br>documentation as you code.<br><br>When Kite is done installing, the Copilot will <br>launch automatically and guide you throught the <br>rest of the setup process."
+msgid "Kite comes with a native app called the Copilot <br>which provides you with real time <br>documentation as you code.<br><br>When Kite is done installing, the Copilot will <br>launch automatically and guide you through the <br>rest of the setup process."
 msgstr "O Kite vem com um aplicativo nativo chamado Copilot <br>, que fornece documentação em tempo real <br>enquanto você codifica. <br><br> Quando o Kite terminar de ser instalado, o Copilot será iniciado automaticamente e guiará você o resto do processo de instalação."
 
 #: spyder/plugins/completion/providers/kite/widgets/install.py:221
